--- a/.gitattributes
+++ b/.gitattributes
@@ -20,4 +20,7 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
-*.psd1 diff=astextplain
+*.psd1 diff=astextplain text
+
+
+
